--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,6 @@ MONGO_URI=mongodb+srv://test1:aawsdawfasdawdsaw@cluster0.ibne0.mongodb.net/Major
 RAPIDAPI_KEY=9be76cd162msh5b9ac9c2ae94b94p1f0bb0jsn85124c69afbf
 PORT=3000
 JWT_SECRET=8f5c7b8b-d5ee-4f59-a418-634ba51b8d18b17703539f3c67c5a42a
+const api = axios.create({
+  baseURL: process.env.REACT_APP_API_URL || 'http://localhost:3000',
+});
